Add cache support at the property level - Resolves BLMODULES-52